@@ -27,6 +27,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+02-Aug-2009 Sam Moffatt
+ + Added default to JApplication::getCfg
+ + [#16939] Add Cookie Domain and Path setting to global config
+
 01-Aug-2009 Hannes Papenberg
  # Fixed com_templates and template parameterset-to-menu item assignment
 
